@@ -1,0 +1,10 @@
+*.bak
+Build
+.build
+blib/*
+_build
+MYMETA.*
+META.*
+Makefile*
+*~
+Getopt-Modular-*
