@@ -26,7 +26,7 @@ format = %-7v %{yyy-MM-dd}d
 
 [AutoPrereqs]
 
-;[MetaResources]
-;repository.type = git
-;repository.web  = https://github.com/dmcbride/{{$dist->name}}
-;repository.url  = git://github.com/dmcbride/{{$dist->name}}.git
+[MetaResources]
+repository.type = git
+repository.web  = https://github.com/dmcbride/Getopt-Modular
+repository.url  = git://github.com/dmcbride/Getopt-Modular.git
