@@ -67,5 +67,5 @@ do {
         );
     dies_ok {GM->parseArgs()} 'rejects unaccepted parameter';
     my $e = Exception::Class->caught();
-    like($e->message(), qr/Bad command-line/, 'Checking error');
+    like($e->message(), qr/Bad command-line/, 'Checking error') or diag explain $e;
 };
