@@ -3,6 +3,7 @@ Revision history for Getopt-Modular
 {{$NEXT}}
         + Add exception types.  Theoretically good for translatability
           (but you get to handle translations).
+        + Add valid_values option
 
 0.07    June 3, 2011
         * Fix some doc typos, add more explanation on how defaults are dynamic
